--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.cdnfonts.com/css/happy-marker" rel="stylesheet">
-    <title>Booba Fun House</title>
+    <title>$WZRD</title>
     <style>
     @import url('https://fonts.cdnfonts.com/css/happy-marker');
         body {
@@ -296,15 +296,6 @@
                 The story of $WZRD
             </h1>
 
-            <div class="curved-square">
-                <p style="color: white; text-shadow: 2px 2px 0px black; ">Bitcoin Wizards is a bitcoin ordinal NFT project celebrating the 10th anniversary of the original Bitcoin Wizard created by mavensbot.
-
-                  <BR><BR>
-                  
-                    
-                  </p>
-                <img src="meme6.jpg" alt="Meme Image"> <!-- This is the image inside the curved square -->
-            </div>
               <br><br><br>
             <div class="curved-square">
               <p style="color: white; text-shadow: 2px 2px 0px black; ">  
