--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 <body>
     <nav>
         <a href="#logo">Home</a>
-        <a href="#">Telegram</a>
+        <a href="https://t.me/bitcoinwizardonsol" target="_blank">Telegram</a>
         <a style="font-size: 4vw; color: black; text-shadow: 2px 2px 0px lightblue"><b>$WZRD</b></a>
         <a href="#">Dexscreener</a>
         <a href="" target="_blank">Twitter</a>
@@ -257,7 +257,7 @@
           </a>
           
           <!-- Telegram clickable image -->
-          <a href="https://telegram.org/" target="_blank">
+          <a href="https://t.me/bitcoinwizardonsol" target="_blank">
               <img src="telegram.png" alt="Telegram" style="width: 100px; height: 100px; border-radius: 50%;">
           </a>
           
