--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <a href="https://t.me/bitcoinwizardonsol" target="_blank">Telegram</a>
         <a style="font-size: 4vw; color: black; text-shadow: 2px 2px 0px lightblue"><b>$WZRD</b></a>
         <a href="#">Dexscreener</a>
-        <a href="" target="_blank">Twitter</a>
+        <a href="https://twitter.com/btcwizardsonsol" target="_blank">Twitter</a>
     </nav>
 
     <div class="content" style="min-height: 300px;">
@@ -252,7 +252,7 @@
 
         <div class="socials" style="display: flex; justify-content: center; gap: 20px;">
           <!-- Twitter clickable image -->
-          <a href="" target="_blank">
+          <a href="https://twitter.com/btcwizardsonsol" target="_blank">
               <img src="twitter.png" alt="Twitter" style="width: 100px; height: 100px; border-radius: 50%;">
           </a>
           
