--- a/index.html
+++ b/index.html
@@ -311,13 +311,13 @@
               <p style="color: white; text-shadow: 2px 2px 0px black; ">  
                 Magic Internet Money is the iconic ad that promoted the bitcoin subreddit. Originally created on Mon Feb 18 2013 @ 23:21:15 by u/mavensbot, it soon became the most popular ad on reddit.
                  </p>
-              <img src="meme4.jpg" alt="Meme Image"> <!-- This is the image inside the curved square -->
+              <img src="wizard1.jpg" alt="Meme Image"> <!-- This is the image inside the curved square -->
           </div>
           <br><br><br>
           <div class="curved-square">
             <p style="color: white; text-shadow: 2px 2px 0px black; ">mavensbot is the original digital artist behind the Magic Internet Money: Bitcoin Wizard.
               <br><br></p>
-            <img src="meme3.jpg" alt="Meme Image"> <!-- This is the image inside the curved square -->
+            <img src="wizard2.jpg" alt="Meme Image"> <!-- This is the image inside the curved square -->
          
           </div>
           <br><br>
